--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,5 +15,5 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api" 
 
 [tool.poetry.scripts]
-run-agent = "src.main:main"
+a = "src.main:main"
 
