--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 anthropic = "^0.40.0"
 python-dotenv = "^1.0.0"
 nba_api = '^1.6.1'
+tweepy = "^4.14.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
